optimize [[ accessor by merging two routines into [[ method and removing some unnecessary check or subsetting
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/ncdfFlow@65889 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/inst/NEWS
+++ b/inst/NEWS
@@ -25,4 +25,7 @@ CHANGES IN 1.1.2:
 		-allow for either flowFrame or matrix to be added by
 		-add sample name to the error message to help troubleshoot the problematic FCS file especially for loading large datasets
 	6.add isNew=FALSE to split method to allow for splitting into multipe cdf files for the sake of parallel computing
-	7.set compress=FALSE to disable compression mode of CDF 		 
+	7.set compress=FALSE to disable compression mode of CDF
+	
+CHANGES IN 1.3.2
+	1.optimize [[ accessor by merging two routines into [[ method and removing some unnecessary check or subsetting	 		 
