--- a/inst/NEWS
+++ b/inst/NEWS
@@ -28,4 +28,10 @@ CHANGES IN 1.1.2:
 	7.set compress=FALSE to disable compression mode of CDF
 	
 CHANGES IN 1.3.2
-	1.optimize [[ accessor by merging two routines into [[ method and removing some unnecessary check or subsetting	 		 
+	1.optimize [[ accessor by merging two routines into [[ method and removing some unnecessary check or subsetting
+
+CHANGES IN 1.5.32
+	1.add "file" argument to allow user to specify file path
+	2.add "rbind" method to allow combining more than two ncdfFlowSets once,
+		
+		 		 
